# saas-demo

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 39483a4bb9d1_add_notes_table.py  86a0efa5085b_initial.py
app/: config.py  database.py  dependencies.py  enums.py  main.py
app/models/: membership.py  note.py  organization.py  user.py
app/routers/: auth.py  notes.py  organizations.py  users.py
app/schemas/: auth.py  note.py  organization.py  user.py
app/services/: auth.py  note.py  organization.py  user.py
doc/: analysis.md
docs/: tutorial.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  main.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  OrgPage.tsx  Signup.tsx
tests/: conftest.py  test_auth.py  test_notes.py  test_orgs.py
